--- a/SandFall/styles/main.css
+++ b/SandFall/styles/main.css
@@ -9,4 +9,4 @@
 @import 'contact.css';
 @import 'supporters.css';
 @import 'footer.css';
-@import 'mobile.css'; /* Mobile responsive styles */
+@import 'mobile.css'; 
