--- a/SandFall/styles/mobile.css
+++ b/SandFall/styles/mobile.css
@@ -4,6 +4,7 @@
 @import 'mobile/intro.css';
 @import 'mobile/about.css';
 @import 'mobile/team.css';
+@import 'mobile/team-page.css';
 @import 'mobile/blog.css';
 @import 'mobile/expedition33.css';
 @import 'mobile/supporters.css';
